--- a/appontment.html
+++ b/appontment.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Altech – IT Sollutions and Services HTML Template" />
     <meta name="author" content="https://www.themetechmount.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Comming Soon</title>
+    <title>Book Appoiment</title>
 
     <!-- favicon icon -->
     <link rel="shortcut icon" href="assets/images/logo.jpg" />
@@ -117,7 +117,7 @@
                                                         <ul>
                                                             <li><a href="prk.html">PRK</a></li>
                                                             <li><a href="about_lasik.html">About Lasik</a></li>
-                                                            <li><a href="#">Am I Eligible?</a></li>
+                                                            <li><a href="eligible.html">Am I Eligible?</a></li>
                                                             <li><a href="faqs.html">Faqs</a></li>
                                                             <li><a href="icl.html">ICL</a></li>
                                                         </ul>
@@ -200,27 +200,27 @@
                                         <div class="form-group"> <input class="form-control" type="tel" placeholder="Enter you Phone"> <span class="form-label">Phone</span> </div>
 
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-6 " style="padding-left: 0;">
                                                 <div class="form-group"> <input class="form-control" type="email" placeholder="Enter your Email"> <span class="form-label">Email</span> </div>
                                             </div>
-                                            <div class="col-md-6">
+                                            <div class="col-md-6" style="padding-left: 0;">
                                                 <div class="form-group"> <input class="form-control" type="text" placeholder="Patient Age"> <span class="form-label">Destination</span> </div>
                                             </div>
                                         </div>
                                         <div class="form-group">
 
-                                            <textarea class="form-control rounded-0" style="height: 100px;" id="exampleFormControlTextarea1" placeholder="Reason fir appointment" rows="10"></textarea>
+                                            <textarea class="form-control rounded-0" style="height: 100px; border-radius: 30px !important; padding-top: 15px;" id="exampleFormControlTextarea1" placeholder="Reason fir appointment" rows="10"></textarea>
                                         </div>
 
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-6" style="padding-left: 0;">
 
                                                 <div class="form-group"> <input class="form-control" type="date" required> <span class="form-label">SELECT DATE & TIME</span> </div>
                                             </div>
 
                                         </div>
                                         <div class="row">
-                                            <div class="col-md-6">
+                                            <div class="col-md-6" style="padding-left: 0;">
                                                 <!-- <h6 for="exampleFormControlTextarea1" class="text-white">Morning</h6> -->
                                                 <div class="form-group"> <select class="form-control" required>
                                                     <option value="" selected hidden>SELECT A TIME SLOT</option>
@@ -255,15 +255,18 @@
         </div>
         <!--site-main end-->
         <!--footer start-->
-        <footer class="footer widget-footer clearfix mt-40 ">
-            <div class="second-footer ttm-textcolor-white bg-img2 ">
+        <footer class="footer ttm-bgcolor-skincolor  widget-footer clearfix mt-30">
+
+            <div class="second-footer ttm-textcolor-white">
                 <div class="container ">
                     <div class="row ">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
                             <div class="widget widget_text clearfix ">
-                                <h3 class="widget-title ">About Our Company</h3>
+                                <h3 class="widget-title ">About Jethwa eye Hospital</h3>
                                 <div class="textwidget widget-text ">
-                                    We are the best world Information Technology Company. Providing the highest quality in hardware &amp; Network solutions. About more than 20 years of experience and 1000 of innovative achievements.
+                                    <p>JETHWA EYE HOSPITAL provide services since 1983. Dr Girish Jethwa is Eye Surgeon. Laser surgery center, Phaco-Emulsification & Intra - Ocular lens implant specialist, Squint & Contact lens clinic, Diabetic Retinopathy
+                                        clinic.
+                                    </p>
                                 </div>
                                 <div class="quicklink-box ">
                                     <!--  featured-icon-box -->
@@ -283,7 +286,8 @@
                                             </div>
                                             <div class="featured-title ">
                                                 <!--  featured-title -->
-                                                <h5>+1 002-123-4567</h5>
+                                                <h5>
+                                                    +91 94084 95547</h5>
                                             </div>
                                         </div>
                                     </div>
@@ -292,37 +296,43 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                            <div class="widget link-widget clearfix ">
+                            <div class="widget link-widget clearfix text-center">
                                 <h3 class="widget-title ">Quick Links</h3>
                                 <ul id="menu-footer-services ">
-                                    <li><a href="# ">Make Appointment</a></li>
-                                    <li><a href="# ">Customer Services</a></li>
-                                    <li><a href="# ">Department Services</a></li>
-                                    <li><a href="# ">About Company</a></li>
-                                    <li><a href="# ">Our Case Studies</a></li>
-                                    <li><a href="# ">Free Consultation</a></li>
-                                    <li><a href="# ">Meet Our Experts</a></li>
-                                    <li><a href="# ">Our Business Growth</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="cataract.html">services</a></li>
+                                    <li><a href="about.html">About</a></li>
+                                    <li><a href="gallery.html">Gallery</a></li>
+                                    <li><a href="appontment.html">Book Appointment</a></li>
+                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <!-- <li><a href="# ">Meet Our Experts</a></li>
+                                    <li><a href="# ">Our Business Growth</a></li> -->
                                 </ul>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                            <div class="widget widget_text clearfix ">
-                                <h3 class="widget-title ">Latest News</h3>
+                            <div class="widget widget_text clearfix  text-center">
+                                <h3 class="widget-title text-">Latest News</h3>
                                 <ul class="widget-post ttm-recent-post-list ">
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " alt="post-img "></a>
-                                        <a href="single-blog.html ">Define World Best IT Solution Technology</a>
+                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
+                                        <a href="single-blog.html ">
+                                            <p> Define World Best IT Solution Technology</p>
+                                        </a>
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 01, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " alt="post-img "></a>
-                                        <a href="single-blog.html ">You Must Try 20 Secret Of Digital Transform</a>
+                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
+                                        <a href="single-blog.html ">
+                                            <p> You Must Try 20 Secret Of Digital Transform</p>
+                                        </a>
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 03, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " alt="post-img "></a>
-                                        <a href="single-blog.html ">10 PHP Frameworks You Need To Use Anywhere</a>
+                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
+                                        <a href="single-blog.html ">
+                                            <p> 10 PHP Frameworks You Need To Use Anywhere</p>
+                                        </a>
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 05, 2019</span>
                                     </li>
                                 </ul>
@@ -361,19 +371,15 @@
                     <div class="row copyright ">
                         <div class="col-md-6 ">
                             <div class=" ">
-                                <span>Copyright © 2019&nbsp;<a href="# ">Altech</a> Template by <a href="https://themetechmount.com/ " target="_blank ">Themetechmount</a></span>
+                                <span>Copyright © 2022&nbsp;<a href="https://keryar.com">Keryar</a> </a></span>
                             </div>
                         </div>
                         <div class="col-md-6 ">
                             <div class="text-md-right res-767-mt-10 ">
                                 <div class="d-lg-inline-flex ">
-                                    <ul id="menu-footer-menu " class="footer-nav-menu ">
-                                        <li><a href="# ">About Us</a></li>
-                                        <li><a href="# ">Services</a></li>
-                                        <li><a href="# ">Privacy</a></li>
-                                    </ul>
+
                                     <div class="float-md-right ml-20 res-767-ml-0 ">
-                                        <img src="assets/images/footer-payment-img.png " alt="payment-img ">
+                                        <img src="assets/images/footer-payment-img.png " class=" " alt="payment-img ">
                                     </div>
                                 </div>
                             </div>
