--- a/squint.html
+++ b/squint.html
@@ -115,7 +115,7 @@
                                                         <ul>
                                                             <li><a href="prk.html">PRK</a></li>
                                                             <li><a href="about_lasik.html">About Lasik</a></li>
-                                                            <li><a href="#">Am I Eligible?</a></li>
+                                                            <li><a href="eligible.html">Am I Eligible?</a></li>
                                                             <li><a href="faqs.html">Faqs</a></li>
                                                             <li><a href="icl.html">ICL</a></li>
                                                         </ul>
@@ -152,7 +152,7 @@
         </header>
         <!--header end-->
         <!-- page-title -->
-        <div class="ttm-page-title-row">
+        <div class="ttm-page-title-row" style="background-image: url(assets/images/banner/Squint.jpg);">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
@@ -286,14 +286,14 @@
                                 <h3 class="widget-title ">About Us</h3>
                                 <div class="ttm-author-widget ">
                                     <div class="author-widget_img text-center ">
-                                        <img class="author-img img-fluid " src="assets/images/download.jpg " alt="author image ">
+                                        <img class="author-img img-fluid " id="jethwaimg" src="assets/images/download.jpg " alt="author image ">
                                     </div>
                                     <h4 class="author-name ">DR. GIRISH JETHWA
 
                                     </h4>
                                     <p class="author-widget_text ">Passed Master Of Surgery (M. S. ophthalmology) in 1981 from N.H. L. Medical College, Ahmedabad, Private Practitioner in Anand Since 1983.</p>
                                     <div class="ttm-btn-box pr-20 pb-20 text-center">
-                                        <a class="ttm-btn ttm-btn-size-sm ttm-btn-shape-round ttm-icon-btn-right ttm-btn-bgcolor-skincolor text-white " href="# " title=" ">Read More &nbsp;<i class="ti ti-arrow-circle-right "></i></a>
+                                        <a class="ttm-btn ttm-btn-size-sm ttm-btn-shape-round ttm-icon-btn-right ttm-btn-bgcolor-skincolor text-white " href="about.html " title=" ">Read More &nbsp;<i class="ti ti-arrow-circle-right "></i></a>
                                     </div>
                                 </div>
                             </aside>
@@ -302,16 +302,9 @@
                                 <ul class="download ">
                                     <li>
                                         <i class="fa fa-file-pdf-o "></i>
-                                        <a href="# " title="Download ">Download Brochure</a>
+                                        <a href="assets/pdf/cataract-detail.pdf" target="_blank"  download="cataract-detail" class="down-pdf">Download Brochure</a>
                                     </li>
-                                    <li>
-                                        <i class="fa fa-file-word-o "></i>
-                                        <a href="# " title="Download ">Our ISO Certificate</a>
-                                    </li>
-                                    <li>
-                                        <i class="fa fa-files-o "></i>
-                                        <a href="# " title="Download ">Download.txt</a>
-                                    </li>
+
                                 </ul>
                             </aside>
 
@@ -557,15 +550,18 @@
             </div>
             <!--site-main end-->
             <!--footer start-->
-            <footer class="footer widget-footer clearfix mt-40 ">
-                <div class="second-footer ttm-textcolor-white bg-img2 ">
+            <footer class="footer ttm-bgcolor-skincolor  widget-footer clearfix mt-30">
+
+                <div class="second-footer ttm-textcolor-white">
                     <div class="container ">
                         <div class="row ">
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
                                 <div class="widget widget_text clearfix ">
-                                    <h3 class="widget-title ">About Our Company</h3>
+                                    <h3 class="widget-title ">About Jethwa eye Hospital</h3>
                                     <div class="textwidget widget-text ">
-                                        We are the best world Information Technology Company. Providing the highest quality in hardware &amp; Network solutions. About more than 20 years of experience and 1000 of innovative achievements.
+                                        <p>JETHWA EYE HOSPITAL provide services since 1983. Dr Girish Jethwa is Eye Surgeon. Laser surgery center, Phaco-Emulsification & Intra - Ocular lens implant specialist, Squint & Contact lens clinic, Diabetic Retinopathy
+                                            clinic.
+                                        </p>
                                     </div>
                                     <div class="quicklink-box ">
                                         <!--  featured-icon-box -->
@@ -585,7 +581,8 @@
                                                 </div>
                                                 <div class="featured-title ">
                                                     <!--  featured-title -->
-                                                    <h5>+1 002-123-4567</h5>
+                                                    <h5>
+                                                        +91 94084 95547</h5>
                                                 </div>
                                             </div>
                                         </div>
@@ -594,37 +591,43 @@
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                                <div class="widget link-widget clearfix ">
+                                <div class="widget link-widget clearfix text-center">
                                     <h3 class="widget-title ">Quick Links</h3>
                                     <ul id="menu-footer-services ">
-                                        <li><a href="# ">Make Appointment</a></li>
-                                        <li><a href="# ">Customer Services</a></li>
-                                        <li><a href="# ">Department Services</a></li>
-                                        <li><a href="# ">About Company</a></li>
-                                        <li><a href="# ">Our Case Studies</a></li>
-                                        <li><a href="# ">Free Consultation</a></li>
-                                        <li><a href="# ">Meet Our Experts</a></li>
-                                        <li><a href="# ">Our Business Growth</a></li>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="cataract.html">services</a></li>
+                                        <li><a href="about.html">About</a></li>
+                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <li><a href="appontment.html">Book Appointment</a></li>
+                                        <li><a href="contact.html">Contact Us</a></li>
+                                        <!-- <li><a href="# ">Meet Our Experts</a></li>
+                                        <li><a href="# ">Our Business Growth</a></li> -->
                                     </ul>
                                 </div>
                             </div>
                             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 widget-area ">
-                                <div class="widget widget_text clearfix ">
-                                    <h3 class="widget-title ">Latest News</h3>
+                                <div class="widget widget_text clearfix  text-center">
+                                    <h3 class="widget-title text-">Latest News</h3>
                                     <ul class="widget-post ttm-recent-post-list ">
                                         <li>
-                                            <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " alt="post-img "></a>
-                                            <a href="single-blog.html ">Define World Best IT Solution Technology</a>
+                                            <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
+                                            <a href="single-blog.html ">
+                                                <p> Define World Best IT Solution Technology</p>
+                                            </a>
                                             <span class="post-date "><i class="fa fa-calendar "></i>May 01, 2019</span>
                                         </li>
                                         <li>
-                                            <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " alt="post-img "></a>
-                                            <a href="single-blog.html ">You Must Try 20 Secret Of Digital Transform</a>
+                                            <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
+                                            <a href="single-blog.html ">
+                                                <p> You Must Try 20 Secret Of Digital Transform</p>
+                                            </a>
                                             <span class="post-date "><i class="fa fa-calendar "></i>May 03, 2019</span>
                                         </li>
                                         <li>
-                                            <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " alt="post-img "></a>
-                                            <a href="single-blog.html ">10 PHP Frameworks You Need To Use Anywhere</a>
+                                            <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
+                                            <a href="single-blog.html ">
+                                                <p> 10 PHP Frameworks You Need To Use Anywhere</p>
+                                            </a>
                                             <span class="post-date "><i class="fa fa-calendar "></i>May 05, 2019</span>
                                         </li>
                                     </ul>
@@ -663,7 +666,7 @@
                         <div class="row copyright ">
                             <div class="col-md-6 ">
                                 <div class=" ">
-                                    <span>Copyright © 2019&nbsp;<a href="# ">Altech</a> Template by <a href="https://themetechmount.com/ " target="_blank ">Themetechmount</a></span>
+                                    <span>Copyright © 2022&nbsp;<a href="https://keryar.com">Keryar</a> </a></span>
                                 </div>
                             </div>
                             <div class="col-md-6 ">
@@ -675,7 +678,7 @@
                                             <li><a href="# ">Privacy</a></li>
                                         </ul>
                                         <div class="float-md-right ml-20 res-767-ml-0 ">
-                                            <img src="assets/images/footer-payment-img.png " alt="payment-img ">
+                                            <img src="assets/images/footer-payment-img.png " class=" " alt="payment-img ">
                                         </div>
                                     </div>
                                 </div>
