--- a/appontment.html
+++ b/appontment.html
@@ -160,7 +160,7 @@
                     <div class="col-md-12">
                         <div class="title-box text-center">
                             <div class="page-title-heading">
-                                <h1 class="title"> Gallery Style 1</h1>
+                                <h1 class="title"> Book Appointment</h1>
                             </div>
                             <!-- /.page-title-captions -->
                             <div class="breadcrumb-wrapper">
@@ -168,7 +168,7 @@
                                     <a title="Homepage" href="index.html"><i class="ti ti-home"></i>&nbsp;&nbsp;Home</a>
                                 </span>
                                 <span class="ttm-bread-sep">&nbsp; : : &nbsp;</span>
-                                <span> project-style-01</span>
+                                <span> Book Apppointment</span>
                             </div>
                         </div>
                     </div>
@@ -191,9 +191,8 @@
                             <div class="row">
                                 <div class="booking-form">
                                     <div class="form-header">
-                                        <h1>Book an Appointment</h1>
+                                        <h2>Book an Appointment</h2>
                                         <h5 class="text-white mt-20">JETHWA EYE HOSPITAL</h5>
-
                                     </div>
                                     <form>
                                         <div class="form-group"> <input class="form-control" type="text" placeholder="Patient Name"> <span class="form-label">Destination</span> </div>
@@ -208,8 +207,7 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-
-                                            <textarea class="form-control rounded-0" style="height: 100px; border-radius: 30px !important; padding-top: 15px;" id="exampleFormControlTextarea1" placeholder="Reason fir appointment" rows="10"></textarea>
+                                            <textarea class="form-control rounded-0" style="height: 100px; border-radius: 30px !important; padding-top: 15px;" id="exampleFormControlTextarea1" placeholder="Reason for appointment" rows="10"></textarea>
                                         </div>
 
                                         <div class="row">
@@ -253,7 +251,6 @@
             <!-- services-slide-section end -->
 
         </div>
-        <!--site-main end-->
         <!--footer start-->
         <footer class="footer ttm-bgcolor-skincolor  widget-footer clearfix mt-30">
 
@@ -315,24 +312,24 @@
                                 <h3 class="widget-title text-">Latest News</h3>
                                 <ul class="widget-post ttm-recent-post-list ">
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> Define World Best IT Solution Technology</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> Define World Best IT Solution Technology</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 01, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> You Must Try 20 Secret Of Digital Transform</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> You Must Try 20 Secret Of Digital Transform</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 03, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> 10 PHP Frameworks You Need To Use Anywhere</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> 10 PHP Frameworks You Need To Use Anywhere</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 05, 2019</span>
                                     </li>
                                 </ul>
@@ -391,8 +388,8 @@
         <!--footer end-->
 
         <!--back-to-top start-->
-        <a id="totop " href="#top ">
-            <i class="fa fa-angle-up "></i>
+        <a id="totop" href="#top">
+            <i class="fa fa-angle-up"></i>
         </a>
         <!--back-to-top end-->
 
