--- a/entropion.html
+++ b/entropion.html
@@ -329,7 +329,7 @@
                                     <li><a href="appontment.html">Book Appointment</a></li>
                                     <li><a href="contact.html">Contact Us</a></li>
                                     <!-- <li><a href="# ">Meet Our Experts</a></li>
-                                    <li><a href="# ">Our Business Growth</a></li> -->
+                                <li><a href="# ">Our Business Growth</a></li> -->
                                 </ul>
                             </div>
                         </div>
@@ -338,24 +338,24 @@
                                 <h3 class="widget-title text-">Latest News</h3>
                                 <ul class="widget-post ttm-recent-post-list ">
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> Define World Best IT Solution Technology</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> Define World Best IT Solution Technology</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 01, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> You Must Try 20 Secret Of Digital Transform</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> You Must Try 20 Secret Of Digital Transform</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 03, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> 10 PHP Frameworks You Need To Use Anywhere</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> 10 PHP Frameworks You Need To Use Anywhere</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 05, 2019</span>
                                     </li>
                                 </ul>
@@ -414,8 +414,8 @@
         <!--footer end-->
 
         <!--back-to-top start-->
-        <a id="totop " href="#top ">
-            <i class="fa fa-angle-up "></i>
+        <a id="totop" href="#top">
+            <i class="fa fa-angle-up"></i>
         </a>
         <!--back-to-top end-->
 
