--- a/about_lasik.html
+++ b/about_lasik.html
@@ -314,6 +314,7 @@
             <!-- sidebar end -->
         </div>
         <!--site-main end-->
+
         <!--footer start-->
         <footer class="footer ttm-bgcolor-skincolor  widget-footer clearfix mt-30">
 
@@ -375,24 +376,24 @@
                                 <h3 class="widget-title text-">Latest News</h3>
                                 <ul class="widget-post ttm-recent-post-list ">
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> Define World Best IT Solution Technology</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> Define World Best IT Solution Technology</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 01, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> You Must Try 20 Secret Of Digital Transform</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> You Must Try 20 Secret Of Digital Transform</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 03, 2019</span>
                                     </li>
                                     <li>
-                                        <a href="single-blog.html "><img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img "></a>
-                                        <a href="single-blog.html ">
-                                            <p> 10 PHP Frameworks You Need To Use Anywhere</p>
-                                        </a>
+                                        <img src="https://via.placeholder.com/150X150/444444.jpg " class=" " alt="post-img ">
+
+                                        <p> 10 PHP Frameworks You Need To Use Anywhere</p>
+
                                         <span class="post-date "><i class="fa fa-calendar "></i>May 05, 2019</span>
                                     </li>
                                 </ul>
@@ -451,8 +452,8 @@
         <!--footer end-->
 
         <!--back-to-top start-->
-        <a id="totop " href="#top ">
-            <i class="fa fa-angle-up "></i>
+        <a id="totop" href="#top">
+            <i class="fa fa-angle-up"></i>
         </a>
         <!--back-to-top end-->
 
