--- a/contectlens.html
+++ b/contectlens.html
@@ -108,7 +108,7 @@
                                                     <li class="active"><a href="#">Contact Lens</a>
                                                         <ul>
 
-                                                            <li><a href="contectlens.html">Contact Lens Clinic</a></li>
+                                                            <li class="active"><a href="contectlens.html">Contact Lens Clinic</a></li>
                                                         </ul>
                                                     </li>
                                                     <li><a href="#">Refractive Errors</a>
@@ -636,11 +636,7 @@
                     <div class="col-md-6 ">
                         <div class="text-md-right res-767-mt-10 ">
                             <div class="d-lg-inline-flex ">
-                                <ul id="menu-footer-menu " class="footer-nav-menu ">
-                                    <li><a href="# ">About Us</a></li>
-                                    <li><a href="# ">Services</a></li>
-                                    <li><a href="# ">Privacy</a></li>
-                                </ul>
+
                                 <div class="float-md-right ml-20 res-767-ml-0 ">
                                     <img src="assets/images/footer-payment-img.png " class=" " alt="payment-img ">
                                 </div>
@@ -654,11 +650,10 @@
     <!--footer end-->
 
     <!--back-to-top start-->
-    <a id="totop " href="#top ">
-        <i class="fa fa-angle-up "></i>
+    <a id="totop" href="#top">
+        <i class="fa fa-angle-up"></i>
     </a>
     <!--back-to-top end-->
-
     </div>
     <!-- page end -->
 
